Added bulk content
Switched to icons for projects instead of all photos, will make google slides for each and link instead

--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -22,8 +22,8 @@
         <h2 class="headliner"> chronological order (from left to right)</h2>
         <div class="project-grid">
             <div class="project">
-                <h3> Independent - The website you are on </h3>
-                <a class="link-button" href="#"> Coming Soon </a>
+                <h3> Independent - This Website </h3>
+                <a class="link-button" href="Projects/portfolio.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Academic - Capstone Project</h3>
@@ -43,7 +43,7 @@
             </div>
             <div class="project">
                 <h3> Academic - PC Watercooler Project</h3>
-                <a class="link-button" href="#"> Coming Soon </a>
+                <a class="link-button" href="Projects/CAD-PC.html"> Coming Soon </a>
             </div>
             <div class="project">
                 <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
@@ -51,7 +51,7 @@
             </div>
             <div class="project">
                 <h3> Independent - 1967 Pontiac GTO Restoration </h3>
-                <a class="link-button" href="Projects/GTO.html"> Learn More </a>
+                <a class="link-button" href="Projects/GTO.html"> Learn More</a>
             </div>
             <div class="project">
                 <h3> Academic - Overseer </h3>
@@ -59,7 +59,6 @@
             </div>
         </div>
 
-        
-        <p> More to come soon !</p>
+
     </body>
 </html>
