--- a/Projects/portfolio.html
+++ b/Projects/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Click 2.0 </title>
+        <title> This Website </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -21,15 +21,12 @@
         <div class="summary-grid">
             <div class="headliner">
                 <h1> 
-                    Independent - Click 2.0 (On pause)
+                    Independent - This Website
                 </h1>
                 <p>
-                    Online gaming rules strictly state it is illegal to use software to perform in-game tasks.
-                    But what if it was hardward doing the actions ? Click 1.0 was born to click a mouse. <br> <br>
-
-                    Click 2.0 aims to add 2-D movement to the mouse in addition to reworking the clicking mechanism 
-                    <br><br>
-                    *On pause until I can obtain a dedicated DC power supply*
+                    Making a website online usually involves paying alot over time and you don't have as much control.
+                    Having had my paid website critiqued by a young cousin, I did what any person would do.
+                    I set out to create my own website using GitHub Pages without paying or knowledge of how to do that.
                 </p>
             </div>
             <figure class="cover">
@@ -40,11 +37,9 @@
                 <h3>
                     Objectives:
                 </h3>
-                <p> Click 2.0 will: </p>
                 <ul>
-                    <li> Improve on Click 1.0 by being able to move the mouse cursor on the screen </li>
-                    <li> Be able to run independent from the computer to avoid anti-cheat</li>
-                    <li> Execute a programmed set of instructions with repeatability </li>
+                    <li> Learn HTML and CSS </li>
+                    <li> Make my own website </li>
                 </ul>
             </div>
 
@@ -53,25 +48,18 @@
                     Challenges:
                 </h3>
                 <ul>
-                    <li> After CAD and 3-D printing, coding and electrical work needs to be done (currently hampering project progress) </li>
-                    <li> Self teaching OpenCV and python to allow for task automation </li>
+                    <li> I didn't know anything about HTML or CSS </li>
                 </ul>
             </div>
             <div class="results">
                 <h3>
-                    Results (So FAR):
+                    Results:
                 </h3>
                 <ul>
-                    <li> An improved CAD model that incorporate an x-y plotter and an improved click solenoid position </li>
-                    <li> An identified need for a dedicated PSU as the USB slot cannot supply consistent amps needed to operate
-                        stepper motors </li>
+                    <li> Certification in HTML and Responsive CSS Design </li>
+                    <li> This website ! </li>
                 </ul>
-                <a href="https://github.com/HapisaurusRex/Click-2.0" target="_blank"> Monitor Click 2.0 Software Dev Here</a>
             </div>
-
         </div>
-
-
-        
     </body>
 </html>
