--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Say Hi </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -19,9 +20,16 @@
         </header>
         <h1 class = "title"> Say Hi </h1>
         <div class="contact">
-            <h2> Email: shah.daniel@pm.me <a class="link-button" href="mailto:shah.daniel@pm.me"> Send me an email</a> </h2> 
-            <h2> +1 (857) 756 2224 <a class="link-button" href="tel:+18577562224"> Call me </a> </h2>
-            
+            <div>
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.838576536738!2d-71.20294648383435!3d42.36727934263688!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e382af7c40b08b%3A0xbd308ca812fc9e!2s350%20Pleasant%20St%2C%20Watertown%2C%20MA%2002472!5e0!3m2!1sen!2sus!4v1646372199227!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="contact-info">
+                <a class="link-button" href="mailto:shah.daniel@pm.me"> Email Me </a> 
+                <h2 class="contact-info text"> shah.daniel@pm.me </h2> 
+                <a class="link-button" href="tel:+18577562224"> Call me </a> 
+                <h2 class="contact-info text"> +1 (857) 756 2224 </h2>
+            </div>
         </div>
+        
     </body>
 </html>
