--- a/Projects/CAD-PC.html
+++ b/Projects/CAD-PC.html
@@ -26,7 +26,7 @@
                 <p>
                     This was my final project for the CAD and Manufacturing course I took. 
                     The goal was to reverse engineer a complex/multi-part product and document the process. 
-                    I chose to reverse engineer an EKWB S240 CPU watercooler. 
+                    I chose to reverse engineer an EKWB S240 CPU watercooler; which included a radiator, CPU cooling block, and fans modeled after the Corsair SP140 fan. 
                 </p>
             </div>
             <figure class="cover">
@@ -38,10 +38,9 @@
                     Objectives:
                 </h3>
                 <ul>
-                    <li>CAD the component based on the drawing provided</li>
-                    <li>Import the CAD model to ANSYS workbench and apply a custom material profile</li>
-                    <li>Verify the engine will remain under yield stress based on a static pressure load</li>
-                    <li>Obtain deformation plot for additional information</li>
+                    <li>Obtain documented tutorials on how to assemble the CAD assembly</li>
+                    <li>Demonstrate comprehension of Solidworks FEA </li>
+                    <li>Perform a sustainability analysis on a component </li>
                 </ul>
             </div>
 
@@ -49,11 +48,10 @@
                 <h3>
                     Challenges:
                 </h3>
-                <p>
-                    Most of the challenges arose from setting up ANSYS. 
-                    Having done Solidworks FEA before, the fixed boundary conditions and static pressure load was easy to do. 
-                    However, I had to learn how to define a custom material profile and import a Solidworks model to Ansys. 
-                </p>
+                <ul>
+                    <li> Due to the proprietary nature of products, finding details and dimensions was much harder than the actual creation of these components </li>
+                    <li> Learned during the project, the tutorials required should be made after the component has been completed to minmize time spent on documentation </li>
+                </ul>
             </div>
             <div class="results">
                 <h3>
