--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Bio </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -22,11 +23,10 @@
             <figcaption></figcaption>
         </figure>
         <p>
-            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. I currently live in Watertown, MA and am looking for work in the Boston, MA area. 
+            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. I currently live in Watertown, MA and am looking for work around Boston, MA. 
             I bring a neutral role to arguments, hands on skills in fabrication, and systematised approach to CAD'ing. I setup as many plans as possible upfront to make future work or pivots less demanding.
-        </p>
-        <p>
-            Outside of my major, I enjoy: cooking for my roommate and I, serving as a remote wealth advisor, lifting heavy objects for a hobby.
+
+            Outside of my major, I enjoy: cooking, serving as a remote wealth advisor, lifting heavy objects for a hobby.
         </P>
     </body>
 </html>
