--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -43,7 +43,7 @@
             </div>
             <div class="project">
                 <h3> Academic - PC Watercooler Project</h3>
-                <a class="link-button" href="Projects/CAD-PC.html"> Coming Soon </a>
+                <a class="link-button" href="Projects/CAD-PC.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
