--- a/Projects/GTO.html
+++ b/Projects/GTO.html
@@ -29,8 +29,8 @@
                 </p>
             </div>
             <figure class="cover">
-                <img class="cover" src="../photos/CAD-1.JPG">
-                <figcaption> Final Render of CAD Assembly </figcaption>
+                <img class="cover" src="../photos/GTO - 1.JPEG">
+                <figcaption> State of the car when I finished working on it </figcaption>
             </figure>
             <div class="objectives">
                 <h3>
@@ -69,6 +69,10 @@
                     <li> Mounted transmission connected to the drive shaft via rear axle </li>
                     <li> An improvised mounting scheme to attach the body to the frame using wooden beams and floor jacks </li>
                 </ul>
+                <figure>
+                    <img class="cover" src="../photos/GTO-2.jpg">
+                    <figcaption> The finished car </figcaption>
+                </figure>
             </div>
         </div>
     </body>
