--- a/Projects/click-2.0.html
+++ b/Projects/click-2.0.html
@@ -33,8 +33,8 @@
                 </p>
             </div>
             <figure class="cover">
-                <img class="cover" src="../photos/portfolio-1.JPG">
-                <figcaption> Screenshot of GitHub Respository </figcaption>
+                <img class="cover" src="../photos/Click-1.jpg">
+                <figcaption> Picture of the device's current state </figcaption>
             </figure>
             <div class="objectives">
                 <h3>
@@ -66,7 +66,11 @@
                     <li> An identified need for a dedicated PSU as the USB slot cannot supply consistent amps needed to operate
                         stepper motors </li>
                 </ul>
-                <a href="https://github.com/HapisaurusRex/Click-2.0" target="_blank"> Monitor Click 2.0 Software Dev Here</a>
+                <figure>
+                    <img class="cover" src="../photos/Click-2.JPG">
+                    <figcaption> Refined CAD model to be printed </figcaption>
+                </figure>
+                <a class ="link-button" href="https://github.com/HapisaurusRex/Click-2.0" target="_blank"> Monitor Click 2.0 Software Dev Here</a>
             </div>
 
         </div>
