--- a/about.html
+++ b/about.html
@@ -23,9 +23,10 @@
             <figcaption></figcaption>
         </figure>
         <p>
-            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. I currently live in Watertown, MA and am looking for work around Boston, MA. 
+            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. 
+            <br><br>
             I bring a neutral role to arguments, hands on skills in fabrication, and systematised approach to CAD'ing. I setup as many plans as possible upfront to make future work or pivots less demanding.
-
+            <br><br>
             Outside of my major, I enjoy: cooking, serving as a remote wealth advisor, lifting heavy objects for a hobby.
         </P>
     </body>
