--- a/Projects/shambler.html
+++ b/Projects/shambler.html
@@ -33,8 +33,8 @@
                 </p>
             </div>
             <figure class="cover">
-                <img class="cover" src="../photos/portfolio-1.JPG">
-                <figcaption> Screenshot of GitHub Respository </figcaption>
+                <img class="cover" src="../photos/Shambler-1.JPG">
+                <figcaption> Current CAD model of functional prototype </figcaption>
             </figure>
             <div class="objectives">
                 <h3>
@@ -64,5 +64,9 @@
                     <li> A second draft with test rigs fabricated to add functionality </li>
                     <li> The main test rig is the shotgun bolt loading and barrel rotating mechanism that is already 3D printed </li>
                 </ul>
+                <figure>
+                    <img class="cover" src="../photos/Shambler-2.JPG">
+                    <figcaption> Bolt loading mechanism test rig </figcaption>
+                </figure>
     </body>
 </html>
