reworked projects template

--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -27,7 +27,7 @@
             </div>
             <div class="project">
                 <h3> Academic - Capstone Project</h3>
-                <a class="link-button" href="#"> Coming Soon </a>
+                <a class="link-button" href="Projects/capstone.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Academic - ANSYS Engine Block</h3>
