--- a/Projects/CAD-PC.html
+++ b/Projects/CAD-PC.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Academic - PC Watercooler CAD Project
                 </h1>
-                <p>
+                <p class="subtitle">
                     This was my final project for the CAD and Manufacturing course I took. 
                     The goal was to reverse engineer a complex/multi-part product and document the process. 
                     I chose to reverse engineer an EKWB S240 CPU watercooler; which included a radiator, CPU cooling block, and fans modeled after the Corsair SP140 fan. 
