--- a/Projects/EmphysysCoOp.html
+++ b/Projects/EmphysysCoOp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Customer Electronic Handpiece </title>
+        <title> Emphysys Electronic Handpiece </title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
@@ -21,9 +21,9 @@
         <div class="summary-grid">
             <div class="headliner">
                 <h1> 
-                    Emphysys Co-op - Customer Electronic Handpiece
+                    Emphysys Co-op - Electronic Handpiece
                 </h1>
-                <p>
+                <p class="subtitle">
                     The customer is developing a hand piece that uses electricity. 
                     Liquid cooling needs to be integrated into the hand piece to cool the electronic components.
                 </p>
