--- a/Projects/GTO.html
+++ b/Projects/GTO.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Independent - 1967 Pontiac GTO Restoration
                 </h1>
-                <p>
+                <p class="subtitle">
                     My first co-op was the first time I lived by myself, and I was inexperienced and bad cook. 
                     I decided to efficiently solve this problem by volunteering to help a coworker, in exchange for food after work.
                 </p>
