--- a/Projects/click-2.0.html
+++ b/Projects/click-2.0.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Independent - Click 2.0 (On pause)
                 </h1>
-                <p>
+                <p class="subtitle">
                     Online gaming rules strictly state it is illegal to use software to perform in-game tasks.
                     But what if it was hardward doing the actions ? Click 1.0 was born to click a mouse. <br> <br>
 
