--- a/Projects/engine-block.html
+++ b/Projects/engine-block.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Academic - ANSYS Engine Block FEA
                 </h1>
-                <p>
+                <p class="subtitle">
                     This was my final project for my FEA class, awarded 115/100 and an informal fastest CAD model generator of the semester. 
                     A component needs to be analyzed to ensure that stresses are under the given yield stress of 241 MPa. 
                     The component is an engine block from an imaginary internal combustion engine. 
