--- a/Projects/overseer.html
+++ b/Projects/overseer.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Academic - Overseer 
                 </h1>
-                <p>
+                <p class="subtitle">
                     For my final intro to engineering project, my team chose to program an Arduino to address Sudden Infant Death Syndrome (SIDS). 
                     Our restrictions were it had offer helpful functions towards our selected issue while remaining under the budget of $100.
                 </p>
