--- a/Projects/portfolio.html
+++ b/Projects/portfolio.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Independent - This Website
                 </h1>
-                <p>
+                <p class="subtitle">
                     Making a website online usually involves paying alot over time and you don't have as much control.
                     Having had my paid website critiqued by a young cousin, I did what any person would do.
                     I set out to create my own website using GitHub Pages without paying or knowledge of how to do that.
