--- a/Projects/shambler.html
+++ b/Projects/shambler.html
@@ -23,7 +23,7 @@
                 <h1> 
                     Independent - Shambler/Убойник (On pause)
                 </h1>
-                <p>
+                <p class="subtitle">
                     As a tribute to Artyom in the Metro books by Dmitry Glukhovsky, I decided to model his most untrusted weapon, Убойник. 
                     So aptly named murderer when translated. A double action, revolving shell loaded shotgun made with scrap AK components.
                     <br> <br>
