--- a/about.html
+++ b/about.html
@@ -22,12 +22,15 @@
             <img class="cover" src="photos/about-1.jpg">
             <figcaption></figcaption>
         </figure>
-        <p>
-            I am finishing my bachelors in mechanical engineering at Northeastern University in May 2022. 
+        <p class="clean">
+            I am a mechanical engineering student at Northeastern University, finishing in May 2022. 
+            I grew up in several continents (not Antarctica) and learned how to be a team player through trial and error. 
+            The most important lesson is that there are many ways to solve a problem and you should always include perspectives outside of personal paradigms if possible.
             <br><br>
-            I bring a neutral role to arguments, hands on skills in fabrication, and systematised approach to CAD'ing. I setup as many plans as possible upfront to make future work or pivots less demanding.
+            Throughout my studies, I focused complementing my soft skills with hands-on/prototyping skills. 
+            I developed my CAD, FEA, and hand on tools during co-op, serving as the main CAD/FEA engineer on my capstone group and authoring a machining 101 manual for electrical and software engineers at my last co-op.
             <br><br>
-            Outside of my major, I enjoy: cooking, serving as a remote wealth advisor, lifting heavy objects for a hobby.
+            
         </P>
     </body>
 </html>
